compiler/tests/invalid_programs/syntax/no_end_classes.jm
!SyntaxError

class Foo
  v:String

  new(s:String)
    v = s
  end
